# Data-Validation-using-Merkle-Trees

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CODEOWNERS
BinaryTree/: BinaryTree.cpp  BinaryTree.h  BinaryTree.hpp  Binary_Tree.cpp  CMakeLists.txt
MerkleTree/: CMakeLists.txt  MerkleTree.cpp  MerkleTree.h  MerkleTree.hpp
src/: CMakeLists.txt  main.cpp
